--- a/bowling.model/build.gradle
+++ b/bowling.model/build.gradle
@@ -15,6 +15,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.code.findbugs:annotations:3.0.1'
     compile 'com.google.guava:guava:19.0'
 
     testCompile 'junit:junit:4.12'
